2008-06-13  Nicolas François  <nicolas.francois@centraliens.net>

	* src/gpasswd.c: The ID argument of audit_logger is an unsigned
	int.
	* src/gpasswd.c: Ignore the return value of signal(). The signal
	handlers are only changed for the last steps of gpasswd, and there
	is no need to restore them.

2008-06-13  Nicolas François  <nicolas.francois@centraliens.net>

	* src/userdel.c: The ID argument of audit_logger is an unsigned
	int.
	* src/userdel.c: fork() and wait() return a pid_t, not an int.

2008-06-13  Nicolas François  <nicolas.francois@centraliens.net>

	* src/newgrp.c: Use a %lu format and cast group and user IDs to
	unsigned long integers.
	* src/newgrp.c: The ID argument of audit_logger is an unsigned
	int.
	* src/newgrp.c: Ignore the return value of signal() (the signal
	handlers are assumed to be the default one and are restored
	later).
	* src/newgrp.c: Do not checl if a pid_t is < 0, check if equal
	to (pid_t)-1.

2008-06-13  Nicolas François  <nicolas.francois@centraliens.net>

	* libmisc/isexpired.c: Cast number of days to a long integer.
	* libmisc/isexpired.c: Add brackets and parenthesis.

2008-06-13  Nicolas François  <nicolas.francois@centraliens.net>

	* libmisc/copydir.c: Do not specify a size of arrays in the
	prototypes.
	* libmisc/copydir.c: Use a size_t for the length of strings.
	* libmisc/copydir.c: Cast the return value of malloc().
	* libmisc/copydir.c: The size argument of write() is a size_t.

2008-06-13  Nicolas François  <nicolas.francois@centraliens.net>

	* libmisc/pwd2spwd.c: Cast number of days to a long integer.
	* libmisc/pwd2spwd.c: Use SHADOW_SP_FLAG_UNSET for the initial
	value of sp.sp_flag.

2008-06-13  Nicolas François  <nicolas.francois@centraliens.net>

	* lib/defines.h: Include <config.h> since it uses the macro that
	might be defined in this header file.
	* lib/defines.h: Prefer checking if HAVE_LOCALE_H or ENABLE_NLS
	are defined (rather than set to non 0).