@@ -1,5 +1,11 @@
 2008-06-13  Nicolas François  <nicolas.francois@centraliens.net>
 
+	* src/pwconv.c: Use SHADOW_SP_FLAG_UNSET for the initial
+	value of sp.sp_flag.
+	* src/pwconv.c: Cast number of days to a long integer.
+
+2008-06-13  Nicolas François  <nicolas.francois@centraliens.net>
+
 	* src/gpasswd.c: The ID argument of audit_logger is an unsigned
 	int.
 	* src/gpasswd.c: Ignore the return value of signal(). The signal
